<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/dark_shade"
    tools:context="com.example.mhmdh.cairometro.TripPlannerActivity">


        <TextView
            android:id="@+id/textViewTripTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itinerary"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>
        <LinearLayout
            android:id="@+id/layoutSpinnersContainer"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/textViewTripTitle">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:text="@string/to"
                    />
                <Spinner
                    android:id="@+id/spinnerTo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"></Spinner>
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:text="@string/from"
                    />
                <Spinner
                    android:id="@+id/spinnerFrom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/buttonGetItinerary"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/layoutSpinnersContainer"
            android:background="@color/white"
            android:textColor="@color/black"
            android:text="خط الرحلة "
            android:layout_marginBottom="15dp"/>
        <TextView
            android:id="@+id/textViewStationNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/buttonGetItinerary"
            android:layout_marginTop="5dp"
            android:text="@string/number_of_stations"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textViewTripTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewStationNumber"
            android:layout_marginTop="5dp"
            android:text="@string/time_of_trip"
            android:textSize="18sp"
            />

        <HorizontalScrollView
            android:id="@+id/scrollViewStations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            >

            <LinearLayout
                android:id="@+id/layoutStationsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>

        </HorizontalScrollView>

    </RelativeLayout>
